--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
+        "author" : [{"SOTI YACINE"}],
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
